--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.melodispel.dpgame">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,16 +34,20 @@
             android:exported="false" />
 
         <activity android:name=".TestActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
 
-        <service android:name=".reminders.PlayReminderJobService"
+        <service
+            android:name=".reminders.PlayReminderJobService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
-        <service android:name=".reminders.PlayReminderIntentService"
-            android:exported="false"/>
+        <service
+            android:name=".reminders.PlayReminderIntentService"
+            android:exported="false" />
+
+        <activity android:name=".ResultsActivity"></activity>
     </application>
 
 </manifest>
