Styling default message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,12 @@
             android:name=".reminders.PlayReminderIntentService"
             android:exported="false" />
 
-        <activity android:name=".ResultsActivity"></activity>
+        <activity android:name=".ResultsActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
